--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -403,6 +403,15 @@
 	}
 }
 
+.three-blurbs--texture {
+	background: url('images/underwater-bg-50.jpg') no-repeat;
+	background-size: cover;
+
+	.blurb {
+		border: none;
+	}
+}
+
 @keyframes float {
 	0% {
 		transform: translatey(0px) translatex(0px) rotate(0deg);
