--- a/style-human.css
+++ b/style-human.css
@@ -1939,6 +1939,14 @@ img.alignright,
   }
 }
 
+.three-blurbs--texture {
+  background: url("images/underwater-bg-50.jpg") no-repeat;
+  background-size: cover;
+}
+.three-blurbs--texture .blurb {
+  border: none;
+}
+
 @-webkit-keyframes float {
   0% {
     -webkit-transform: translatey(0px) translatex(0px) rotate(0deg);
