--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -403,15 +403,6 @@
 	}
 }
 
-.three-blurbs--texture {
-	background: url('images/underwater-bg-50.jpg') no-repeat;
-	background-size: cover;
-
-	.blurb {
-		border: none;
-	}
-}
-
 @keyframes float {
 	0% {
 		transform: translatey(0px) translatex(0px) rotate(0deg);
@@ -514,6 +505,21 @@
 	}
 }
 
+
+
+/* ## Sections : Custom HTML Tag
+--------------------------------------------- */
+
+.custom-style--underwater {
+	background: url('images/underwater-bg-50.jpg') no-repeat;
+	background-size: cover;
+	padding: 50px 0;
+	margin: 0;
+	
+	.blurb {
+		border: none;
+	}
+}
 
 
 /* ## Sections : Feed
