--- a/style-human.css
+++ b/style-human.css
@@ -1939,14 +1939,6 @@ img.alignright,
   }
 }
 
-.three-blurbs--texture {
-  background: url("images/underwater-bg-50.jpg") no-repeat;
-  background-size: cover;
-}
-.three-blurbs--texture .blurb {
-  border: none;
-}
-
 @-webkit-keyframes float {
   0% {
     -webkit-transform: translatey(0px) translatex(0px) rotate(0deg);
@@ -2053,6 +2045,18 @@ img.alignright,
   display: block;
   margin: 30px auto;
   border-top: 1px solid rgba(62, 62, 62, 0.08);
+}
+
+/* ## Sections : Custom HTML Tag
+--------------------------------------------- */
+.custom-style--underwater {
+  background: url("images/underwater-bg-50.jpg") no-repeat;
+  background-size: cover;
+  padding: 50px 0;
+  margin: 0;
+}
+.custom-style--underwater .blurb {
+  border: none;
 }
 
 /* ## Sections : Feed
