--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -91,11 +91,15 @@
 		}
 
 		.item-content__multiple-links {
-			padding: 10px 40px;
+			padding: 10px 0px;
+			margin: 0 auto;
+			display: block;
+			width: 80%;
 
 			img {
 				width: 30px;
 				height: 120px;
+				margin-top: 0;
 				margin-right: 10px;
 				float: left;
 			}
