add social feed and parallax for underwater

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -517,6 +517,9 @@
 .custom-style--underwater {
 	background: url('images/underwater-bg-50.jpg') no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
+	background-position: top;
+	height: 100%;
 	padding: 110px 0 50px;
 	margin: 0;
 	
@@ -666,6 +669,15 @@
 		}
 	}
 }
+
+
+/* ## Sections : Social Feed (Shortcode based)
+--------------------------------------------- */
+
+.social-feed {
+    background-color: #f0f0f0;
+}
+
 
 /* ## Sections : Banners
 --------------------------------------------- */
