--- a/style-human.css
+++ b/style-human.css
@@ -2056,6 +2056,9 @@ img.alignright,
 .custom-style--underwater {
   background: url("images/underwater-bg-50.jpg") no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  background-position: top;
+  height: 100%;
   padding: 110px 0 50px;
   margin: 0;
 }
@@ -2188,6 +2191,12 @@ img.alignright,
     width: 6px;
     top: 10px;
   }
+}
+
+/* ## Sections : Social Feed (Shortcode based)
+--------------------------------------------- */
+.social-feed {
+  background-color: #f0f0f0;
 }
 
 /* ## Sections : Banners
