--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -363,7 +363,7 @@ i {
 
 blockquote {
   margin: 40px 0;
-  color: #02aad4;
+  color: #06ceff;
   font-family: Georgia, serif;
 }
 
@@ -377,7 +377,7 @@ blockquote::before {
   left: -50px;
   position: relative;
   top: -40px;
-  color: #02aad4;
+  color: #06ceff;
 }
 
 /* ## Headings
@@ -603,8 +603,8 @@ input[type="button"].button--secondary,
 input[type="reset"].button--secondary,
 input[type="submit"].button--secondary,
 .button.button--secondary {
-  background-color: #02aad4;
-  border: 1px solid #02aad4;
+  background-color: #06ceff;
+  border: 1px solid #06ceff;
 }
 
 button:hover,
@@ -1588,7 +1588,7 @@ img.alignright,
   padding: 7px 10px;
   margin-bottom: 2px;
   opacity: .94;
-  background-color: #02aad4;
+  background-color: #06ceff;
 }
 .blurb .item-content p {
   padding: 6px 30px 13px;
@@ -1622,10 +1622,10 @@ img.alignright,
 .blurb .item-content .item-content__multiple-links ol {
   text-align: left;
   line-height: 24px;
-  color: #02aad4;
+  color: #06ceff;
 }
 .blurb .item-content .item-content__multiple-links ol a, .blurb .item-content .item-content__multiple-links ol a:hover, .blurb .item-content .item-content__multiple-links ol a:visited, .blurb .item-content .item-content__multiple-links ol a:active {
-  color: #02aad4;
+  color: #06ceff;
   text-decoration: none;
 }
 
@@ -1764,7 +1764,7 @@ img.alignright,
 .post-categories a, .entry-categories a, .entry-tags a {
   display: inline-block;
   color: #FFF;
-  background-color: #02aad4;
+  background-color: #06ceff;
   padding: 3px 10px;
   border-radius: 5px;
   margin: 2px 4px;
@@ -1856,7 +1856,7 @@ img.alignright,
 }
 .quote-block .wrap {
   max-width: 700px;
-  color: #02aad4;
+  color: #06ceff;
 }
 .quote-block .wrap p {
   text-align: justify;
@@ -1875,7 +1875,7 @@ img.alignright,
   position: absolute;
   left: 99px;
   top: -49px;
-  color: #02aad4;
+  color: #06ceff;
 }
 .quote-block .wrap span {
   font-style: italic;
@@ -1937,6 +1937,10 @@ img.alignright,
 }
 /* ## Sections : Post Selection
 --------------------------------------------- */
+.home .post-selection {
+  margin: 0px 0 15px;
+}
+
 .post-selection {
   margin: 40px 0 15px;
 }
@@ -2223,7 +2227,7 @@ img.alignright,
 .banner-layout--callout .kpi-banner {
   z-index: 201;
   border-radius: 5px;
-  box-shadow: 0 2rem 5rem -2.5rem rgba(62, 62, 62, 0.87), 0rem 0.3rem 0.5rem -0.4rem rgba(62, 62, 62, 0.87);
+  box-shadow: 0 2rem 5rem -2.5rem rgba(62, 62, 62, 0.38), 0rem 0.3rem 0.5rem -0.4rem rgba(62, 62, 62, 0.38);
 }
 .banner-layout--callout.social-kpi {
   margin-top: 20px;
@@ -2240,7 +2244,7 @@ img.alignright,
   font-size: 1.6rem;
 }
 #social-kpi-banner .et_social_icons_container li .et_social_count {
-  color: #02aad4;
+  color: #06ceff;
   font-weight: 900;
   font-size: 5.6rem;
 }
@@ -2258,11 +2262,11 @@ img.alignright,
 .kpi-banner .kpi-count {
   font-weight: 900;
   font-size: 5.6rem;
-  color: #02aad4;
+  color: #06ceff;
   line-height: 50px;
 }
 .kpi-banner .kpi-text {
-  padding: 0 20%;
+  padding: 0 10%;
   margin: 0;
 }
 
